<resources>
    <string name="app_name">Ejemplos</string>
    <string name="tittle_app">Mascotas</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="todo">TODO</string>
    <string name="agregar_mascota">Agregar mascota</string>
    <string name="nombre">Nombre</string>
    <string name="agrega_tu_mascota">Agrega tu mascota</string>
    <string name="dueno">Dueño</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="descripcion">Descripción</string>

    <string-array name="breeds_array">
        <item>Pastor Alemán</item>
        <item>Siberian Husky</item>
        <item>San Bernardo</item>
        <item>Labrador</item>
    </string-array>
</resources>
